--- a/style.css
+++ b/style.css
@@ -54,3 +54,15 @@ ul li {
 .each {
     margin: 20px;
 } 
+
+@media (max-width: 560px) {
+    img {
+        width: 50%;
+    }
+    .navbrand {
+        font-size: 0.9rem;
+    }
+    #brand {
+        font-size: 25px;
+    }
+}
